<resources>
    <string name="app_name">GuguChat</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome__gugu_chat"> Gugu chat</string>
    <string name="log_out">Log out</string>
    <string name="e_mail_login">E-mail</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="login">Login</string>
    <string name="password_login">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="e_mail_log">E-Mail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="display_name_settings">Display Name</string>
    <string name="wassup_i_m_on_this_app">Wassup !, I\'m on this App</string>
    <string name="textview">TextView</string>
    <string name="user_status">User Status</string>
    <string name="current_status">Current Status</string>
    <string name="display_name_profile_activity">Display Name</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="total_friends">Total Friends</string>
    <string name="delate_friend">DECLINE  REQUEST </string>
    <string name="account_settings_menu">Account Settings</string>
    <string name="all_users_menu">All Users</string>

    <!-- Welcome-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">SIGN IN</string>
    <string name="slide_1_title">WELCOME TO GUGUCHAT</string>
    <string name="slide_1_desc">WHAT TO EXPECT</string>
    <string name="slide_3_title">FRIENDS</string>
    <string name="slide_3_desc">COMING SOON!</string>
    <string name="slide_4_title">WELCOME</string>
    <string name="slide_4_desc">COMING SOON!</string>

    <!-- LOGIN-->


    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_current">CurrentActivity</string>
    <string name="today">Today</string>
    <string name="steps">Steps</string>
    <string name="hours">Hours</string>
    <string name="minutes">Min</string>
    <string name="title_activity_login">Login</string>
    <string name="forgot">Forgot your Password?</string>
    <string name="email">Email</string>
    <string name="sin_up">Sign up for Shape Stick</string>
    <string name="ques">\?</string>
    <string name="social">Join us with your social network account</string>
    <string name="login_shape_stick">Login to Shape Stick</string>
    <string name="recover">Recover</string>
    <string name="beta">Beta</string>

<!--new-->
    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>

    <!-- Bundle arg names -->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>

    <!-- activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>

    <!-- strings -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>


    <!-- fragment names -->
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>

    <!-- dialog names -->
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>

</resources>
