<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
     android:scrollbars="vertical"


    tools:context="com.project.sam.guguchat.ProfileActivity">

    <include
        android:id="@+id/profile_abb_bar"
        layout="@layout/app_bar_layout"
        />


    <TextView
        android:id="@+id/profile_dislplay_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/display_name_profile_activity"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_abb_bar"
        android:background="@color/ColorAvatar"
        android:contentDescription=""
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/avatar" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Profile_decline_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingTop="5dp"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_send_req_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:paddingTop="15dp"
        android:text="@string/total_friends"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/profile_crrent_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_dislplay_name"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:text="@string/current_status"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/Profile_decline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/profile_send_req_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/profile_send_req_btn"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/delate_friend"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>
